// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders disabled 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-full font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed px-4 py-2 text-label-lg bg-primary text-on-primary hover:bg-primary/90"
  disabled=""
>
  Guardar
</button>
`;

exports[`Button renders primary variant 1`] = `
<button
  aria-busy="false"
  class="inline-flex items-center justify-center gap-2 rounded-full font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed px-4 py-2 text-label-lg bg-primary text-on-primary hover:bg-primary/90"
>
  Guardar
</button>
`;

exports[`Button renders with loading=true 1`] = `
<button
  aria-busy="true"
  class="inline-flex items-center justify-center gap-2 rounded-full font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed px-4 py-2 text-label-lg bg-primary text-on-primary hover:bg-primary/90"
  disabled=""
>
  <svg
    aria-hidden="true"
    class="animate-spin text-current w-4 h-4"
    fill="none"
    viewBox="0 0 24 24"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4z"
      fill="currentColor"
    />
  </svg>
  Guardar
</button>
`;
